[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiac-map-diffusion"
version = "0.1.0"
description = "Antithetic-sampling conditional diffusion for denoising ventricular MAP cardiac time series"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "TODO: paper authors", email = "TODO@example.org" },
]
keywords = [
    "cardiac", "denoising", "MAP", "diffusion", "DDPM",
    "antithetic-variates", "uncertainty", "signal-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Versions track the cluster `gpu_env2` environment used for the paper
# (PyTorch 2.5.1 / CUDA 12.1, Python 3.12). See environment.yml for the
# CUDA-pinned conda build; the lower bounds below are the pip fallback.
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "scikit-image>=0.21",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "PyWavelets>=1.4",
    "dtaidistance>=2.3",
    "ml-collections>=0.1.1",
    "absl-py>=1.4",
    "tensorboard>=2.12",
    "tqdm>=4.64",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
notebooks = [
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]

[project.urls]
Homepage = "https://github.com/<your-username>/cardiac-map-diffusion"
Repository = "https://github.com/<your-username>/cardiac-map-diffusion"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
# Migrated paper code is kept byte-faithful; lint the package surface, not the
# verbatim research modules. Loosen as the code is gradually cleaned.
extend-exclude = []

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
